# umanga-gl

src/: Makefile.am  Makefile.in  README.TXT  SDLgears.cpp  SDLgears.cpp~  oglproject.cpp  oglproject.cpp~  ugl_camera.cpp  ugl_camera.cpp~  ugl_camera.h  ugl_camera.h~  ugl_clight.cpp  ugl_clight.cpp~  ugl_clight.h  ugl_clight.h~  ugl_cmesh.cpp  ugl_cmesh.cpp~  ugl_cmesh.h  ugl_cmesh.h~  ugl_ctexture.cpp  ugl_ctexture.cpp~  ugl_ctexture.h  ugl_ctexture.h~  ugl_engine.cpp  ugl_engine.cpp~  ugl_engine.h  ugl_engine.h~  ugl_md2mesh.cpp  ugl_md2mesh.cpp~  ugl_md2mesh.h  ugl_md2mesh.h~  ugl_misc.cpp  ugl_misc.cpp~  ugl_misc.h  ugl_misc.h~  ugl_oglsdl.h  ugl_oglsdl.h~  umangagl.h~
